--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
+    "mongoose-float": "^1.0.4",
     "natives": "^1.1.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
