--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Backend for Meals that Connect",
+  "description": "Backend for SLO Hikes",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
