--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: n&&&77o test specified\" && exit 1",
+    "start": "cd backend && npm install && npm start"
   },
   "repository": {
     "type": "git",
