--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "brew": "^0.0.8",
     "dotenv": "^8.2.0",
     "node-sass": "^5.0.0",
-    "react-dotenv": "^0.1.3",
-    "react-bootstrap": "^1.5.1"
+    "nodemon": "^2.0.7",
+    "react-bootstrap": "^1.5.1",
+    "react-dotenv": "^0.1.3"
   },
   "devDependencies": {},
   "scripts": {
