--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "heroku-prebuild": "cd frontend && npm install",
     "test": "echo \"Error: n&&&77o test specified\" && exit 1",
     "start": "cd frontend && npm install && npm start"
   },
