--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "cypress": "^7.3.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "moment": "^2.29.1",
