--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: n&&&77o test specified\" && exit 1",
-    "start": "cd frontend && npm install && npm start"
+    "start": "cd backend && npm install && npm start"
   },
   "repository": {
     "type": "git",
