--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.22",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
@@ -56,6 +57,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.2",
+    "jest": "^26.6.0",
     "react-test-renderer": "^17.0.2"
   }
 }
