--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.2",
     "jest": "^26.6.0",
+    "jest-fetch-mock": "^3.0.3",
     "react-test-renderer": "^17.0.2"
   }
 }
