--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_install:
   - cd ./backend
   - npm install
-  - cd ./frontend
+  - cd ../frontend
   - npm install
   - npm run coverage
   - npm run build
